@@ -1,4 +1,34 @@
-# ET_BOMBER
+ET_BOMBER
+===
 
-### This project was created by 2 people.
-I did my own part about bombs, objectdestroyer and art style.
+Description
+---
+
+This project was created by 2 people. I did my own part about bombs, scene, objectdestroyer and art style.
+
+
+Software requirements
+---
+
+*  [Java SDK 13.0.2 ++](https://www.oracle.com/java/technologies/javase-jdk13-downloads.html)
+*  [Java FX SDK 11.0.2 ++](https://gluonhq.com/products/javafx/)
+
+
+How to execute
+---
+
+Download JavaFX SDK for your operating system and unzip to a desired location.
+
+
+Download JDK 13 or later for your operating system. Add JDK 13 to `PATH`
+
+
+Change directory to this project.
+
+
+Open Windows Commandline / Terminal to enter command.
+      
+      java --module-path "%Path_to_FX%\lib" --add-modules javafx.controls,javafx.fxml -jar ET_bomber.jar
+      
+      
+Enjoy!!!!
